--- a/backend/views/cargaTallerdocentes.html
+++ b/backend/views/cargaTallerdocentes.html
@@ -6,11 +6,13 @@
     <title>Cargar Taller Docentes</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Kubic&display=swap" rel="stylesheet">
+
     <style>
         body {
             background-color: #252D4F;
             background-image: url("../public/fondo2.jpg");
-            font-family: Arial, sans-serif;
+            font-family: 'Kubic', sans-serif;
             color: white;
             margin: 0;
             padding-top: 60px; /* Añade espacio para la barra de navegación fija */
@@ -78,7 +80,7 @@
 <!-- Navbar -->
 <section id="barradenavegacion">
     <nav class="navbar navbar-expand-lg navbar-dark">
-        <div class="container-fluid">
+        <div class="container">
             <a class="navbar-brand" href="http://localhost:5173/EducarLab.html">
                 <img class="logo" src="images/logo.png" alt="EducarLAB" height="30" />
             </a>
@@ -88,11 +90,11 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="consultasEscuela.html">Escuelas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="consultasComunidad.html">Inscripciones Comunidad</a></li>
-                    <li class="nav-item"><a class="nav-link" href="consultasDocentes.html">Inscripciones Docentes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="consultasComunidad.html">Comunidad</a></li>
+                    <li class="nav-item"><a class="nav-link" href="consultasDocentes.html">Docentes</a></li>
                     <li class="nav-item"><a class="nav-link" href="adminComentarios.html">Comentarios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="cargaTalleralumnos.html">Taller Comunidad</a></li>
-                    <li class="nav-item"><a class="nav-link" href="cargaTallerdocentes.html">Taller Docente</a></li>
+                    <li class="nav-item"><a class="nav-link" href="cargaTalleralumnos.html">Talleres estudiantes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="cargaTallerdocentes.html">Talleres docentes</a></li>
                 </ul>
             </div>
         </div>
@@ -101,7 +103,7 @@
 
 <!-- Main Content -->
 <div class="container">
-    <h2>Cargar Taller Docente</h2>
+    <h1>Editor de talleres</h1>
     <form action="http://localhost:3000/docente/confirmacion" method="POST" class="mb-4">
         <div class="mb-3">
             <label for="titulo" class="form-label">Título:</label>
@@ -122,7 +124,7 @@
         <button type="submit" class="btn btn-primary">Cargar</button>
     </form>
 
-    <h1>Talleres de Docentes</h1>
+    <h1>Talleres de docentes</h1>
     <div class="table-container">
         <table class="table table-dark table-striped table-hover">
             <thead>
