arreglado el auth de los token con las cookies

--- a/backend/views/cargaTalleralumnos.html
+++ b/backend/views/cargaTalleralumnos.html
@@ -89,12 +89,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="consultasEscuela.html">Escuelas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="consultasComunidad.html">Comunidad</a></li>
-                    <li class="nav-item"><a class="nav-link" href="consultasDocentes.html">Docentes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="adminComentarios.html">Comentarios</a></li>
-                    <li class="nav-item"><a class="nav-link" href="cargaTalleralumnos.html">Talleres estudiantes</a></li>
-                    <li class="nav-item"><a class="nav-link" href="cargaTallerdocentes.html">Talleres docentes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/">Escuelas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/consultasComunidad">Comunidad</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/consultasDocentes">Docentes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/adminComentarios">Comentarios</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/alumnos">Talleres estudiantes</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/docentes">Talleres docentes</a></li>
                 </ul>
             </div>
         </div>
