--- a/backend/views/register.html
+++ b/backend/views/register.html
@@ -40,7 +40,7 @@
     
         async function registerUser(email, password) {
             try {
-                const response = await fetch('http://localhost:3000/users/createAdmin', { // Cambia aquí la ruta
+                const response = await fetch('http://localhost:3000/users/createAdmin', { 
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json'
