--- a/backend/views/adminComentarios.html
+++ b/backend/views/adminComentarios.html
@@ -101,7 +101,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto"> 
-                    <li class="nav-item"><a class="nav-link" href="/">Escuelas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/consultasEscuelas">Escuelas</a></li>
                     <li class="nav-item"><a class="nav-link" href="/consultasComunidad">Comunidad</a></li>
                     <li class="nav-item"><a class="nav-link" href="/consultasDocentes">Docentes</a></li>
                     <li class="nav-item"><a class="nav-link" href="/adminComentarios">Comentarios</a></li>
