--- a/backend/views/consultasComunidad.html
+++ b/backend/views/consultasComunidad.html
@@ -89,7 +89,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="/">Escuelas</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/consultasEscuelas">Escuelas</a></li>
                     <li class="nav-item"><a class="nav-link" href="/consultasComunidad">Comunidad</a></li>
                     <li class="nav-item"><a class="nav-link" href="/consultasDocentes">Docentes</a></li>
                     <li class="nav-item"><a class="nav-link" href="/adminComentarios">Comentarios</a></li>
@@ -173,7 +173,7 @@
     // Función para cargar los datos de inscripciones de alumnos
     async function loadAllAlumnos() {
         try {
-            const response = await fetch('http://localhost:3000 /inscripciones_comunidad');
+            const response = await fetch('http://localhost:3000/inscripciones_comunidad');
             if (!response.ok) {
                 throw new Error('');
             }
@@ -265,7 +265,7 @@
     // Función para enviar solicitud de cancelación de inscripción
     async function cancelarInscripcion(id) {
         try {
-            const response = await fetch(`http://localhost:3000 /cancelar_inscripcion_comunidad/${id}`, {
+            const response = await fetch(`http://localhost:3000/cancelar_inscripcion_comunidad/${id}`, {
                 method: 'PUT',
                 headers: { 'Content-Type': 'application/json' }
             });
