--- a/backend/views/resetPassword.html
+++ b/backend/views/resetPassword.html
@@ -60,7 +60,7 @@
                 // Manejar la respuesta del servidor
                 if (data.error === 0) {
                     alert('Contraseña restablecida correctamente');
-                    window.location.href = '/login.html'; // Redirigir al usuario al inicio de sesión
+                    window.location.href = '/login'; // Redirigir al usuario al inicio de sesión
                 } else {
                     document.getElementById('errorMessage').textContent = data.message || 'Ocurrió un error';
                 }
