--- a/backend/views/requestPasswordReset.html
+++ b/backend/views/requestPasswordReset.html
@@ -33,7 +33,7 @@
 
     try {
         // Cambiar la URL a '/sendResetPasswordEmail' en lugar de '/resetPassword'
-        const response = await fetch('http://localhost:3000 /users/sendResetPasswordEmail', { 
+        const response = await fetch('http://localhost:3000/users/sendResetPasswordEmail', { 
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
